...
"user_password" = "Password";
"user_home_zip_code" = "Home Zip Code";
"user_gender" = "Gender";
"user_country_code" = "Country Code";
"user_dob" = "Date of Birth";
"user_mobile_phone" = "Mobile phone number";
"user_signup" = "Sign Up";
"user_invalid_registration" = "Invalid Registration";
"user_invalid_registration_info" = "Please make sure all the proper registration fields are filled out.";
"user_change_password" = "Change Password";
"user_change_phone" = "Change Phone";
"user_edit_profile" = "Edit Profile";
"user_updates_saved" = "Updates Saved";
...
"user_gender_trans_woman" = "Transgender Woman";
"user_gender_trans_man" = "Transgender Man";
"user_gender_non_binary" = "Non-Binary";
"user_gender_agender" = "Agender/I don’t identify with any gender";
"user_gender_not_listed" = "Gender not listed";
"user_gender_not_state" = "Prefer not to state";
"user_i_agree" = "I agree";
"user_optional" = "Optional";

// SETTINGS
"settings_title" = "Settings";
"settings_terms" = "Terms & Conditions";
"settings_privacy" = "Privacy Policy";
...
"ride_ride_confirmation" = "Ride Confirmation";
"ride_rating_reason" = "We're sorry you were unhappy with your ride.\nCan you please let us know the reason?";
"ride_rating_submitted" = "Rating Submitted!";
"ride_your_driver" = "Your driver";
"ride_select_pickup_stop" = "Select your pick up spot";
"ride_select_dropoff_stop" = "Select your drop off spot";
"ride_select_this_stop" = "Ok";
"ride_go_to_stop_short" = "Your driver will pick you up at the spot you selected.";
"ride_go_to_stop" = "Your driver will pick you up at the spot you selected. Please make sure you are there when your driver arrives.";
"ride_select_another_stop" = "Select another spot";
"ride_pickup_at" = "Pick up at";
"ride_dropoff_at" = "Drop off at";
"ride_driver_pickup" = "Your driver will pick you up here. Need a different pick up spot? Search for another location above or tap Move pin.";
...
// GENERAL
"general_no" = "No";
"general_yes" = "Yes";
"general_cancel" = "Cancel";
"general_edit" = "Edit";
"general_remove" = "Remove";
"general_next" = "Next";
"general_save" = "Save";
"general_ok" = "Ok";
"general_are_you_sure" = "Are you sure?";
"general_confirm" = "Confirm";
"general_done" = "Done";
"general_invalid_input" = "Invalid input";


// MESSAGES
"messages_me" = "Me";
"messages_I_understand" = "I Understand";
...
"wav_button_on" = "Requesting wheelchair access";
"wav_button_off" = "Not requesting wheelchair access";
"wav_request_toggle_title" = "WAV option on request";
"wav_toggle_info" = "Control WAV access for individual ride requests, use the toggle above to hide or show the wheelchair access button during the request process";

//EMAIL VERIFICATION
"email_deadline_warning_title" = "Verify Your Email";
"email_pre_deadline_warning_btn" = "Verify Email";
"email_pre_deadline_warning_body_1" = "Your registered address is";
"email_pre_deadline_warning_body_2" = "Please confirm this is the correct email address by clicking below. You have";
"email_pre_deadline_warning_body_3" = "day";
"email_pre_deadline_warning_body_4" = "to verify your account.";
"email_post_deadline_warning_body_1" = "Before you can book your next ride, we need you to verify your Circuit account. Your registered address is";
...
"Re-enter Password" = "Re-enter Password";
"Change Password" = "Change Password";
"Passwords Not Matching" = "Passwords Not Matching";
"Please make sure that you've entered the same password twice." = "Please make sure that you've entered the same password twice.";
"Welcome Back!" = "Welcome Back!";
"Sign in below with your account info" = "Sign in below with your account info";
"Welcome Aboard!" = "Welcome Aboard!";
"Start by filling out your basic account info\nMust be 16 or older to create an account" = "Start by filling out your basic account info\nMust be 16 or older to create an account";
"Tell us a little bit more about yourself" = "Tell us a little bit more about yourself";
"Change Phone" = "Change Phone";
"First we will send a PIN code to your new mobile phone" = "First we will send a PIN code to your new mobile phone";
"Confirm Phone" = "Confirm Phone";
"Please check your text messages for a pincode" = "Please check your text messages for a pincode";
...
"Cancel Ride" = "Cancel Ride";
"Log In" = "Log In";
"Sign Up" = "Sign Up";
"and" = "and";
"You need to update Circuit app to the latest version in order to request rides" = "You need to update Circuit app to the latest version in order to request rides";
"Invalid Submission" = "Invalid Submission";
"Email address is not valid" = "Email address is not valid";
"Mobile phone number is not valid" = "Mobile phone number is not valid";
"Password must be at least 8 characters" = "Password must be at least 8 characters";
"Password must contain at least 1 uppercase letter" =  "Password must contain at least 1 uppercase letter";
"Password must contain at least 1 special character" = "Password must contain at least 1 special character";
"Password must contain at least 1 number" = "Password must contain at least 1 number";
"This field" = "This field";
"is required" = "is required";
"Date of Birth is required" = "Date of Birth is required";
"Invalid date format" = "Invalid date format";
"You must be at least 16 years of age" = "You must be at least 16 years of age";
"terms of use" = "terms of use";
"privacy policy" = "privacy policy";
"code of conduct" = "code of conduct";
"Your ride summary" = "Your ride summary";
"Tell us about your ride" = "Tell us about your ride";
"Driver Tip" = "Driver Tip";
...
