...

    let pageView: TitlePageView = .instantiateFromNib()

    private let firstNameField: TextField = {
        let field = TextField()
        field.configure(name: "user_first_name".localize(), placeholder: "user_first_name".localize())
        field.accessibilityIdentifier = "firstNameTextField"
        field.validators = [RequiredValidator()]
        field.image = #imageLiteral(resourceName: "UserBadge")
        field.autocorrectionType = .no
        return field
    }()

    private let lastNameField: TextField = {
        let field = TextField()
        field.configure(name: "user_last_name".localize(), placeholder: "user_last_name".localize())
        field.accessibilityIdentifier = "lastNameTextField"
        field.validators = [RequiredValidator()]
        field.image = #imageLiteral(resourceName: "UserBadge")
        field.autocorrectionType = .no
        return field
    }()

    private let emailField: TextField = {
        let field = TextField()
        field.configure(name: "user_email".localize(), placeholder: "user_email".localize())
        field.accessibilityIdentifier = "emailTextField"
        field.validators = [RequiredValidator(), EmailValidator()]
        field.image = #imageLiteral(resourceName: "EmailBadge")
        field.keyboardType = .emailAddress
        return field
    }()

    private let passwordField: TextField = {
        let field = TextField()
        field.configure(name: "user_password".localize(), placeholder: "user_password".localize())
        field.accessibilityIdentifier = "passwordTextField"
        field.validators = [RequiredValidator(), PasswordValidator()]
        field.image = #imageLiteral(resourceName: "LockBadge")
        field.isSecureTextEntry = true
        #if DEBUG && STAGING
        field.isSecureTextEntry = false
        #endif
        return field
    }()

    private let zipCodeField: TextField = {
        let field = TextField()
        field.configure(name: "user_home_zip_code".localize(), placeholder: "user_home_zip_code".localize())
        field.accessibilityIdentifier = "zipCodeTextField"
        field.validators = [RequiredValidator()]
        field.image = #imageLiteral(resourceName: "HomeBadge")
        field.keyboardType = .numberPad
        return field
    }()

...
        let field = TextField()
        field.configure(
            name: "user_gender".localize(),
            placeholder: "user_gender".localize() + " (" + "user_optional".localize().lowercased() + ")",
            defaultValue: genderOptions[8].localize() //user_gender_not_state
        )
        field.accessibilityIdentifier = "genderTextField"
        field.validators = []
        field.image = #imageLiteral(resourceName: "UserBadge")

        let picker = UIPickerView()
        picker.dataSource = self
        picker.delegate = self
...
        return field
    }()

    private lazy var countryCodeField: TextField = {
        let field = TextField()
        field.configure(name: "user_country_code".localize(), placeholder: "user_country_code".localize())
        field.accessibilityIdentifier = "countryCodeTextField"
        field.validators = [RequiredValidator()]
        field.image = #imageLiteral(resourceName: "PhoneBadge")

        let picker = UIPickerView()
        picker.dataSource = self
        picker.delegate = self
...
        return field
    }()

    private lazy var dobField: DateTextField = {
        let field = DateTextField()
        field.configure(name: "user_dob".localize(), placeholder: "user_dob".localize())
        field.accessibilityIdentifier = "dateOfBirthTextField"
        field.validators = [RequiredValidator(), BirthdayValidator()]
        field.image = #imageLiteral(resourceName: "UserBadge")
        field.displayFormatter = BirthdayValidator.displayDateFormatter
        field.valueFormatter = BirthdayValidator.serverDateFormatter
        return field
    }()

    private let phoneField: TextField = {
        let field = TextField()
        field.configure(name: "user_mobile_phone".localize(), placeholder: "user_mobile_phone".localize())
        field.accessibilityIdentifier = "phoneNumberTextField"
        field.validators = [RequiredValidator(), PhoneValidator()]
        field.image = #imageLiteral(resourceName: "PhoneBadge")
        field.keyboardType = .numberPad
        return field
    }()

...
